# the-new-hotness

./: .cico.pipeline  .coveragerc  .gitignore  .mergify.yml  .packit.yaml  .readthedocs.yml  .travis.yml  .zuul.yaml  CHANGELOG.rst  Containerfile.dev  Dockerfile.dev  MANIFEST.in  Makefile  README.rst  Vagrantfile  Vagrantfile.example  bugzilla2fedmsg.py  container-compose.yml  dev-requirements.txt  development.ini.example  docker-compose.yml  pyproject.toml  requirements.txt  setup.py  the-new-hotness.spec  the_new_hotness.py  tox.ini  yum-config
.container/: motd
.github/: dependabot.yml
.github/workflows/: main.yaml
ca_design/: design.md  requirements.md
ci/: test-tox.yaml
config/: config.toml.example  monitoring.toml.example
devel/: anitya_updates.py  fedora_messaging_replay.py
devel/ansible/: vagrant-playbook.yml
docs/: Makefile  admin-guide.rst  ca-design.rst  conf.py  dev-guide.rst  index.rst  message-schema.rst  release-notes.rst  requirements.rst  user-guide.rst
fedmsg.d/: base.py  bugzilla2fedmsg-config.py  hotness-example.py  logging.py  ssl.py
hotness/: __init__.py  anitya.py  buildsys.py  bz.py  cache.py  config.py  consumers.py  exceptions.py  helpers.py  hotness_consumer.py  packit.py  repository.py
hotness/builders/: __init__.py  builder.py  koji.py
hotness/common/: __init__.py  rpm.py
hotness/databases/: __init__.py  cache.py  database.py  redis.py
hotness/domain/: __init__.py  package.py
hotness/exceptions/: __init__.py  base_exception.py  builder_exception.py  download_exception.py  http_exception.py  notifier_exception.py  patcher_exception.py
hotness/notifiers/: __init__.py  bugzilla.py  fedora_messaging.py  notifier.py
hotness/patchers/: __init__.py  bugzilla.py  pagure.py  patcher.py
hotness/requests/: __init__.py  build_request.py  insert_data_request.py  notify_request.py  package_request.py  request.py  retrieve_data_request.py  submit_patch_request.py
hotness/responses/: __init__.py  response.py  (+2 more)
hotness_schema/: README.rst  get_fixture_data.py  setup.py
news/: 228.feature  230.feature  276.dev  286.feature  302.bug  309.dev  316.bug  318.bug  322.feature  323.feature  324.feature  330.bug  332.bug  333.feature  336.feature  338.dev  345.bug  353.dev  401.dev  408.dev  437.bug  456.bug  533.bug  547.bug  549.bug  557.bug  558.other  564.bug  565.bug  581.api  605.bug  628.feature  99.feature  PR340.dev  PR349.dev  PR405.dev  PR407.dev  PR447.dev  PR465.dev  PR472.dev  (+8 more)
scripts/: kojitesting.py
tests/: test_buildsys.py  test_config.py  test_helpers.py  test_hotness_consumer.py  test_style.py
(+106 files in other folders)
